# croquet

./: CMakeLists.txt  meson.build
include/: croquet.h  crutches.h
include/croquet/: controller.h
include/crutches/: response.h
src/: main.c  meson.build
subprojects/: interface99.wrap  metalang99.wrap
test/: main.c  meson.build
